--- a/DSP-course-material-2023/01_Statistics/Statistics.ipynb
+++ b/DSP-course-material-2023/01_Statistics/Statistics.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -426,18 +426,34 @@
     "    \n",
     "    N = x.shape[0]\n",
     "    \n",
+    "    b = 0\n",
     "    acc = 0\n",
     "    acc_of_squares = 0\n",
+    "    c = 0\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    \n",
+    "    b = (1/(N - 1))\n",
+    "    \n",
+    "    for i in range(0,N):\n",
+    "        acc_of_squares += x[i]**2\n",
+    "        acc += (x[i])\n",
+    "        \n",
+    "    c = 1/N\n",
+    "   \n",
+    "\n",
+    "    mean = acc/N\n",
+    "\n",
+    "    var = b*(acc_of_squares - c*(acc)**2)\n",
+    "\n",
+    "    std = np.sqrt(var)        \n",
     "        \n",
     "    return mean, var, std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -453,7 +469,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean of the signal is: [2.09140981e-17]\n",
+      "The standard deviation of the signal is: [0.70710678]\n",
+      "The variance of the signal is: [0.5]\n"
+     ]
+    }
+   ],
    "source": [
     "rs_signal_mean, rs_signal_var, rs_signal_std = running_statistics(x)\n",
     "\n",
