--- a/DSP-course-material-2023/01_Statistics/Statistics.ipynb
+++ b/DSP-course-material-2023/01_Statistics/Statistics.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -406,7 +406,8 @@
      "schema_version": 3,
      "solution": true,
      "task": false
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -467,7 +468,8 @@
      "schema_version": 3,
      "solution": false,
      "task": false
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -514,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -526,7 +528,8 @@
      "schema_version": 3,
      "solution": true,
      "task": false
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -553,7 +556,9 @@
     "        None\n",
     "        \"\"\"\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        self.n = self.n + 1\n",
+    "        self.acc = self.acc + x\n",
+    "        self.acc_of_squares = self.acc_of_squares + x**2\n",
     "        return\n",
     "    \n",
     "    \n",
@@ -571,7 +576,10 @@
     "        std (float): Returns standard deviation of a input signal sample x\n",
     "        \"\"\"\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        self.mean = self.acc/self.n\n",
+    "        self.var = (1/(self.n))*(self.acc_of_squares - ((1/self.n)*(self.acc**2)))\n",
+    "        self.std = np.sqrt(self.var)\n",
+    "        \n",
     "        return self.mean, self.var, self.std\n",
     "    \n",
     "    \n",
@@ -582,7 +590,7 @@
     "        standard deviation of an input signal sample.\n",
     "\n",
     "        Parameters: \n",
-    "        x (numpy array): One dimensional array representing a input signal sample.\n",
+    "        x (numpy array): One dimensional array representing a input signal sample. \n",
     "\n",
     "        Returns: \n",
     "        mean (float): Returns mean of a input signal sample x\n",
@@ -590,9 +598,8 @@
     "        std (float): Returns standard deviation of a input signal sample x\n",
     "        \"\"\"\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "        return self.calc(x)        \n",
-    "        "
+    "        self.update(x)\n",
+    "        return self.calc(x)"
    ]
   },
   {
@@ -617,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -630,7 +637,8 @@
      "schema_version": 3,
      "solution": false,
      "task": false
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -650,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -664,9 +672,22 @@
      "schema_version": 3,
      "solution": false,
      "task": false
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m ref_mean_acc, ref_var_acc, ref_std_acc \u001b[38;5;241m=\u001b[39m calc\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39misclose(mean_acc, ref_mean_acc, rtol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-02\u001b[39m)\u001b[38;5;241m.\u001b[39mall()\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39misclose(var_acc, ref_var_acc, rtol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-02\u001b[39m)\u001b[38;5;241m.\u001b[39mall()\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39misclose(std_acc, ref_std_acc, rtol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-02\u001b[39m)\u001b[38;5;241m.\u001b[39mall()\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "with open('data.pkl', 'rb') as data:\n",
     "    calc = pickle.load(data)\n",
